--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "simple-service",
-   "version": "0.0.1"
+   "version": "0.0.1",
    "dependencies": {
       "express": "2.4.6"
    }
